--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "class-variance-authority": "^0.7.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-progress": "^1.1.0"
+    "@radix-ui/react-progress": "^1.1.0",
+    "gsap": "^3.12.2",
+    "@studio-freight/lenis": "^1.0.27",
+    "imagesloaded": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
