--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@radix-ui/react-progress": "^1.1.0",
     "gsap": "^3.12.2",
     "@studio-freight/lenis": "^1.0.27",
-    "imagesloaded": "^5.0.0"
+    "imagesloaded": "^5.0.0",
+    "framer-motion": "^11.0.3"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
