--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@studio-freight/lenis": "^1.0.27",
+    "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
+    "framer-motion": "^11.0.3",
+    "gsap": "^3.12.2",
+    "imagesloaded": "^5.0.0",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "tailwind-merge": "2.5.4",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-progress": "^1.1.0",
-    "gsap": "^3.12.2",
-    "@studio-freight/lenis": "^1.0.27",
-    "imagesloaded": "^5.0.0",
-    "framer-motion": "^11.0.3"
+    "react-router-dom": "^6.30.0",
+    "tailwind-merge": "2.5.4"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
